<resources>
    <string name="app_name">MIST Atlanta</string>
    <!-- Strings related to login -->
    <string name="prompt_first_name">First Name</string>
    <string name="prompt_last_name">Last Name</string>
    <string name="prompt_mist_id">MIST Id</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>

    <string name="choose_competition">Choose Competition</string>
    <string name="brackets_appear">brackets will appear for selected bracket competitions</string>
    <string name="view_rules">View Rules</string>
    <string name="view_brackets">View Brackets</string>

    <string name="action_login">Login</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_invalid_mist_id">MIST Id must contain a dash "-" at the fifth digit place</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short, it must be atleast 5 characters </string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_invalid_lastName">This last name is invalid</string>
    <string name="error_invalid_firstName">This first name is invalid</string>
    <string name="error_invalid_mistId">This MIST Id must be 10 or 9 characters including a dash at the fifth digit place</string>
    <string name="error_invalid2_mistId">This MIST Id is already registered</string>
    <string name="error_invalid3_mistId">This MIST Id does not exist</string>

    <string name="received_notification">received_notification</string>

    <string name="program_image">program_image</string>

    <string name="forgot_password_text_click">Forgot your password?\n\n</string>
    <string name="forgot_password_text">Enter the email associated with your account to receive instructions on resetting your password</string>

    <string name="error_field_required">This field is required</string>
    <string name="error_field_required_forgot_password">What email address would you like to reset the password for?</string>

    <string name="text_mist_hotline">MIST Atlanta Help Line \n (678)-561-6478</string>
    <string name="text_campus_police">Campus Police \n (706)-542-5813</string>
    <string name="text_nurse">On-duty Nurse \n (404)-317-1431</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_login_auth">Sign in</string>
    <string name="title_activity_register_auth">Register</string>
    <string name="title_activity_rulebook">Rulebook</string>
    <string name="user_uid_key">current_user_uid</string>
    <string name="current_user_key">current_user</string>
    <string name="current_user_type">current_user_type</string>
    <string name="num_unread_notifications">num_unread_notifications</string>
    <string name="notifications">notifications</string>
    <string name="teammates">teammates</string>
    <string name="events">events</string>

    <!--Names for the titles of each page-->
    <string name="my_mist_page_title">My Mist</string>
    <string name="notification_page_title">Notifications</string>
    <string name="program_page_title">Program</string>
    <string name="competitions_page_title">Competitions</string>
    <string name="map_page_title">Map</string>


    <!--Names of the firebase database tables-->
    <string name="firebase_event_table">mist_2017_event</string>
    <string name="firebase_user_table">mist_2017_user</string>
    <string name="firebase_registered_user_table">mist_2017_registered-user</string>
    <string name="firebase_team_table">mist_2017_team</string>
    <string name="firebase_bracket_table">mist_2017_bracket</string>

    <string name="guest_info_1">The Muslim Interscholastic Tournament of Atlanta (MIST) is a fun, educational,
        interactive program of competitions and workshops designed to bring Muslim and non-Muslim high school
        students together from around the nation to develop leadership, communication, and other creative skills
        in order to develop a strong personal identity.
    </string>

    <string name="guest_learn_more">Learn more at: \n www.mistatlanta.com</string>

    <string name="guest_info_2">
        Our mission is to unite high school students together in order to create a growing environment in which leadership,
        communication, and creative skills are developed all while gaining a more intellectual understanding of Islam.
        These environments thrive during our annual regional and national tournaments.</string>

    <string name="app_package_name">com.mistapp.mistandroid</string>

    <string name="title_activity_help_directory">HelpDirectory</string>
    <string name="title_activity_team">Team</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_splash">SplashActivity</string>

</resources>

