<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/select_competition_text"
        android:layout_marginTop="40dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textColor="@color/black"
        android:text="Select a Competition"
        android:textSize="30dp"/>

    <Spinner
        android:id="@+id/competitions_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/competitions"
        android:textAlignment="center"
        android:layout_below="@+id/select_competition_text"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        android:prompt="@string/choose_competition" />

    <Button
        android:id="@+id/view_rules_btn"
        android:layout_below="@id/competitions_spinner"
        android:background="@drawable/red_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_rules"
        />

    <Button
        android:id="@+id/view_bracket_btn"
        android:layout_below="@id/view_rules_btn"
        android:background="@drawable/red_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:text="@string/view_brackets"
        />


</RelativeLayout>