<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="@drawable/final_official_logo"
    android:backgroundTint="#06B10721"
    android:layout_height="match_parent">


    <TextView
        android:layout_alignParentTop="true"
        android:id="@+id/guest_wecome_text"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="10dp"
        android:text="Welcome to MIST Atlanta 2017!"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:textSize="30dp"/>

    <TextView
        android:layout_below="@+id/guest_wecome_text"
        android:textColor="@color/black"
        android:id="@+id/guest_information_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_margin="15dp"
        android:text="@string/guest_info_1"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:textSize="15dp"/>

    <TextView
        android:layout_below="@+id/guest_information_1"
        android:textColor="@color/black"
        android:id="@+id/guest_information_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_margin="15dp"
        android:text="@string/guest_info_2"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:textSize="15dp"/>

    <TextView
        android:layout_below="@+id/guest_information_2"
        android:id="@+id/guest_visit_website"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/guest_learn_more"
        android:layout_centerHorizontal="true"
        android:autoLink="web"
        android:textSize="15dp"/>


</RelativeLayout>