<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_no_action_bar_vertical_margin"
    style="@style/mist_red_background"
    tools:context="com.mistapp.mistandroid.LogInAuth">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".3">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/final_official_logo"
        android:id="@+id/imageView2" />

    </RelativeLayout>
    <!-- Login progress -->


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".7">

    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_centerHorizontal="true"
        android:visibility="gone" />

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerHorizontal = "true"
            android:layout_centerVertical = "true" >

            <LinearLayout
                style="@style/login_register_text_input_layout">

            <EditText
                    android:paddingLeft="4dp"
                    android:id="@+id/log_in_email"
                    android:background="@drawable/edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:layout_centerVertical="true"
                    android:ellipsize="start"
                    android:singleLine="true" />

            </LinearLayout>

            <LinearLayout
                style="@style/login_register_text_input_layout">

            <EditText
                android:paddingLeft="4dp"
                android:id="@+id/log_in_password"
                android:background="@drawable/edit_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/prompt_password"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:fontFamily="sans-serif"
                android:inputType="textPassword"
                android:maxLines="1"
                android:layout_centerVertical="true"
                android:ellipsize="start"
                android:singleLine="true"
                />
            </LinearLayout>

            <!--<Button-->
                <!--style="@style/login_register_submit_text"-->
                <!--android:text="@string/action_login"-->
                <!--android:id="@+id/email_sign_in_button"-->
                <!--android:textColor="@color/mistRed"-->
                <!--android:shadowColor="@color/black"-->
                <!--android:background="@drawable/login_register_button"/>-->

            <TextView
                android:id="@+id/email_sign_in_text"
                android:text="@string/action_login"
                android:clickable="true"
                style="@style/login_register_submit_text"
                />

            <TextView
                android:textAlignment ="center"
                android:text = "Haven't created an account yet? \n Register here"
                android:id = "@+id/textViewSignin"
                style="@style/switch_login_register_text"
                />

            <TextView
                android:textAlignment ="center"
                android:text = "@string/forgot_password_text_click"
                android:id = "@+id/text_forgot_password"
                style="@style/switch_login_register_text"
                />
            
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>
