<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:weightSum="100"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="55"
        android:id="@+id/program_layout">

        <TextView
            android:id="@+id/program_of_events_text"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="Program of Events"
            android:textSize="30dp"
            android:layout_gravity="center_horizontal"
            />

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/program_of_events_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@+id/program_of_events_text"
            android:weightSum="3"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            >

            <Button
                android:layout_weight="1"
                android:text="Friday, March 17th"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/friday_schedule_button"
                android:textColor="@color/white"
                android:shadowColor="@color/black"
                android:shadowRadius="3"
                android:layout_margin="5dp"
                android:background="@drawable/red_button"/>

            <Button
                android:layout_weight="1"
                android:text="Saturday, March 18th"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/saturday_schedule_button"
                android:layout_below="@id/friday_schedule_button"
                android:textColor="@color/white"
                android:shadowColor="@color/black"
                android:shadowRadius="3"
                android:layout_margin="5dp"
                android:background="@drawable/red_button"/>
            <Button
                android:layout_weight="1"
                android:text="Sunday, March 19th"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/sunday_schedule_button"
                android:layout_below="@+id/saturday_schedule_button"
                android:textColor="@color/white"
                android:shadowColor="@color/black"
                android:shadowRadius="3"
                android:layout_margin="5dp"
                android:background="@drawable/red_button"/>

        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_weight="45"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/important_contact_layout">
    <TextView
        android:id="@+id/important_contacts_text"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/program_of_events_layout"
        android:layout_marginTop="10dp"
        android:text="Important Contacts"
        android:textSize="30dp"
        android:layout_gravity="center_horizontal"
        />

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/content_help_directory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/important_contacts_text"
            android:orientation="vertical"
            android:weightSum="3"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <Button
            android:layout_weight="1"
            android:text="@string/text_mist_hotline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:textAlignment="viewStart"
            android:id="@+id/helpLine"
            android:layout_margin="5dp"
            android:drawableEnd="@drawable/ic_local_phone_black_24dp"
            android:background="@drawable/pink_contact_button"/>

        <Button
            android:layout_weight="1"
            android:text="@string/text_campus_police"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:textAlignment="viewStart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/campusPolice"
            android:layout_below="@+id/helpLine"
            android:drawableEnd="@drawable/ic_local_phone_black_24dp"
            android:layout_margin="5dp"
            android:background="@drawable/gray_contact_button"/>

        <Button
            android:layout_weight="1"
            android:visibility="gone"
            android:text="@string/text_nurse"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:textAlignment="viewStart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/nurse"
            android:layout_below="@+id/campusPolice"
            android:drawableEnd="@drawable/ic_local_phone_black_24dp"
            android:layout_margin="5dp"
            android:background="@drawable/pink_contact_button"/>

    </LinearLayout>
    </LinearLayout>
</LinearLayout>